[package]
name = "groth_16"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
ark-secp256k1 = "0.5.0"
ark-bn254 = "0.5.0"
ark-r1cs-std = "0.4"
ark-bls12-381 = "0.5.0"
ark-bls12-377 = "0.5.0"
itertools = "0.10.1"
rand = "0.8.5"
ark-snark = "0.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

